# MuseTUI

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: build.yaml  release.yaml
src/: main.rs
src/api/: detail.rs  lyric.rs  mod.rs  player.rs  search.rs
src/config/: def_config.yaml  mod.rs  server.rs
src/crypto/: aes.rs  mod.rs  netease.rs  rsa.rs  test.js
src/tui/: app.rs  mod.rs
src/utils/: request.rs
