[package]
name = "MuseTUI"
version = "0.1.0"
edition = "2024"
resolver = "2"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
rand = "0.8.5"
anyhow = "1.0.99"
aes = "0.9.0-rc.0"
cbc = "0.2.0-rc.0"
block-padding = "0.3"
hex = "0.4.3"
rsa = { version = "0.9.8"}
reqwest = { version = "0.12.23", features = ["json"] }
tokio = { version = "1.47.1" ,features = ["full"]}
